=========================================================================
CHANGE LOG
=========================================================================

Changes up to 0.99

    beta16

    * reading and saving of stereo images

    * now renders stereo pairs in both side-by-side and QB stereo modes

    * fixed valence assignment for HIS and other polymeric residues
      with various names

    * some fixes and extra residues added to parameter assignment code

    * color by explicit 24-bit hex RGB triplets: 0xffffff

    * unicode hyphens in selections now converted to ASCII dashes

    * patched memory leak with dihedral display

    beta15

    * possible bug fix for settings storage related to corrupted sessions?

    beta14

    * delete command no longer allows partial names

    * updates for chempy bricks

    * fixed bug in case matching for the selection engine

    * Python API work

    beta13

    * fixed botched beta12 build for windows

    beta12

    * better mouse-handling in horizontal split-screen stereo

    * fixed setting side effects bug introduced in beta 11

    * faster transparency drawing (sorting)

    beta11

    * fixed some longstanding but minor ranging errors in isomesh and
      isosurf 

    * map_trim command

    beta10

    * cartoon_loop_cap and cartoon_tube_cap settings

    * fixed latent memory-crash bug in align
    
    * fixed min/max issues with maps, alignment, and extents (blush)
    
    * fixed a couple bugs in p1m parsing

    * now supporting wildcards and name lists for most commands
      which previously took either a name or selection updates...massive
      changes to "executive" source code, so there may be new bugs...

    * new workaround for amber-like PDB files.

    * incorporated a sampled subset of the Dunbrack backbone-dependent
      rotamers at 10, 20, and 60 degrees based on > 1% occurence

    * incorporated the Dunbrack backbone independent rotamers
    