@@ -583,6 +583,7 @@ CSetting *SettingNewFromPyList(PyMOLGlobals *G,PyObject *list);
 #define cSetting_cartoon_tube_cap           431
 #define cSetting_cartoon_loop_cap           432
 #define cSetting_nvidia_bugs                433
+#define cSetting_image_dots_per_inch        434
 
 /* when you add a new settingg also remember:
    layer1/Setting.c
@@ -592,7 +593,7 @@ CSetting *SettingNewFromPyList(PyMOLGlobals *G,PyObject *list);
 
 /* cSetting_ss_INIT must always be last setting_index +1 */
 
-#define cSetting_INIT                       434
+#define cSetting_INIT                       435
 
 #endif
 
